@@ -173,7 +173,7 @@ $magicWords = array(
 	'servername'             => array( 0, 'SERVERNAME', 'ИМЕСЕРВЕРА' ),
 	'scriptpath'             => array( 0, 'SCRIPTPATH', 'СКРИПТА' ),
 	'grammar'                => array( 0, 'GRAMMAR:', 'ГРАМАТИКА:' ),
-	'notitleconvert'         => array( 0, '__NOTITLECONVERT__', '__NOTC__', '__БЕЗТЦ__' ),
+	'notitleconvert'         => array( 0, '__NOTITLECONVERT__', '__NOTC__', '__БЕЗКН__', '__BEZKN__' ),
 	'nocontentconvert'       => array( 0, '__NOCONTENTCONVERT__', '__NOCC__', '__БЕЗЦЦ__' ),
 	'currentweek'            => array( 1, 'CURRENTWEEK', 'ТРЕНУТНАНЕДЕЉА' ),
 	'currentdow'             => array( 1, 'CURRENTDOW', 'ТРЕНУТНИДОВ' ),
