@@ -175,7 +175,7 @@ $magicWords = array(
 	'servername'             => array( 0, 'SERVERNAME', 'IMESERVERA' ),
 	'scriptpath'             => array( 0, 'SCRIPTPATH', 'SKRIPTA' ),
 	'grammar'                => array( 0, 'GRAMMAR:', 'GRAMATIKA:' ),
-	'notitleconvert'         => array( 0, '__NOTITLECONVERT__', '__NOTC__', '__BEZTC__' ),
+	'notitleconvert'         => array( 0, '__NOTITLECONVERT__', '__NOTC__', '__БЕЗКН__', '__BEZKN__' ),
 	'nocontentconvert'       => array( 0, '__NOCONTENTCONVERT__', '__NOCC__', '__BEZCC__' ),
 	'currentweek'            => array( 1, 'CURRENTWEEK', 'TRENUTNANEDELjA' ),
 	'currentdow'             => array( 1, 'CURRENTDOW', 'TRENUTNIDOV' ),
